# ORPilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aifor/: __init__.py  cli.py
aifor/codegen/: __init__.py  executor.py  generator.py
aifor/llm/: base.py  config.py  openai.py
aifor/models/: problem.py  solution.py
aifor/prompts/: codegen.py  data_guide.py  interview.py  report.py
aifor/solver/: __init__.py  base.py  ortools_solver.py  pulp_solver.py  pyomo_solver.py  registry.py
aifor/workflow/: edges.py  graph.py  state.py
aifor/workflow/nodes/: data_collection.py  interview.py  model_builder.py  reporter.py  solver_runner.py
examples/transportation/: problem.txt
orpilot/: __init__.py  cli.py
orpilot/codegen/: executor.py  generator.py  ir_compiler.py
orpilot/llm/: __init__.py  anthropic.py  config.py
orpilot/models/: __init__.py  data.py  ir.py
orpilot/prompts/: codegen.py  data_guide.py  data_guide_system.md  interview.py  ir_builder.py  ir_compiler.py  ir_prompt.txt  param_computation_user.md
orpilot/solver/: base.py  ortools_solver.py  pulp_solver.py  pyomo_solver.py
orpilot/workflow/: edges.py  graph.py  state.py
orpilot/workflow/nodes/: data_collection.py  interview.py  ir_builder.py  ir_compiler_node.py  model_builder.py  param_computation.py  reporter.py  solver_runner.py
tests/test_codegen/: test_executor.py
tests/test_llm/: test_base.py
tests/test_solver/: test_registry.py
tests/test_workflow/: test_edges.py  test_state.py
